<resources>
    <string name="app_name">Releave</string>
    <string name="title_activity_main">Releave</string>

    <!-- For Facebook API -->
    <string name="facebook_app_id">107305349752171</string>
    <!-- For custom Chrome tab login -->
    <string name="fb_login_protocol_scheme">fb107305349752171</string>

    <!-- Strings for menu -->
    <string name="log_out">Log out</string>

    <!-- Strings for Main Screen -->
    <string name="no_location">Could not find location</string>
    <string name="is_bathroom_locked">Is this bathroom locked?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="lock_image_desc">lock</string>
    <string name="database_error_toast">Error uploading to database</string>
    <string name="bathroom_uploaded">Bathroom uploaded</string>
    <string name="undo_upload">Upload removed!</string>
    <string name="undo_upload_fail">Failed to remove upload</string>
    <string name="undo">UNDO</string>

    <!-- Strings for Login Screen -->
    <string name="or">Or</string>
    <string name="google_login">Login with Google</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- Strings for Upload Screen -->
    <string name="upload">Add Restroom</string>
    <string name="key_code">Requires key or code</string>
    <string name="select_location">Select location on map</string>
    <string name="submit">Submit</string>
    <string name="location_retrieval_error">Error retrieving location</string>
</resources>
