<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_alert_dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_top_corners_primary"
        android:text="@string/upload"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="10pt"
        android:padding="@dimen/quarter_standard_margin"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/half_standard_margin"
        android:paddingRight="@dimen/half_standard_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_code"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <Switch
            android:id="@+id/is_locked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:paddingLeft="@dimen/half_standard_margin"
        android:paddingRight="@dimen/half_standard_margin"
        android:paddingBottom="@dimen/half_standard_margin"
        android:paddingTop="@dimen/quarter_standard_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_location"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/gps_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gps_location"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/half_standard_margin"
        android:paddingRight="@dimen/half_standard_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <View
            android:id="@+id/test"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/light_gray"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

</LinearLayout>